<resources>
    <string name="app_name">RelativeLayout</string>
    <string name="phone_name">Samsung Galaxy</string>
    <string name="phone_price">$599.99</string>
    <string name="phone_desc">Version: SM-S901B, SM-S901B/OS (International); SM-S901U (USA);
        SM-S901U1 (USA unlocked); SM-S901W (Canada); SM-S901N (Korea); SM-S9010 (China); SM-S901E
        (Asia/Africa)</string>
    <string name="memory">256GB | 8GB</string>
    <string name="camera">50MP, f/1.8, 23mm(wide)</string>
    <string name="bookmark">Bookmark</string>
</resources>